# zkfold-bitcoin-lib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  zkfold-bitcoin-lib.cabal
scripts/: regtest.sh
src/ZkFold/Bitcoin/: Class.hs  CoinSelection.hs  Errors.hs  IO.hs  Types.hs  Utils.hs
src/ZkFold/Bitcoin/Examples/: HTLC.hs
src/ZkFold/Bitcoin/Provider/: Common.hs  MempoolSpace.hs  Node.hs
src/ZkFold/Bitcoin/Provider/Node/: ApiEnv.hs  Class.hs  Exception.hs  Request.hs  Response.hs
src/ZkFold/Bitcoin/Test/: Constants.hs
src/ZkFold/Bitcoin/Types/Internal/: BlockHash.hs  BlockHeader.hs  BlockHeight.hs  Common.hs  Confirmations.hs  HexByteString.hs  NetworkId.hs  Provider.hs  Skeleton.hs  UTxO.hs
test/: Main.hs
test/ZkFold/Bitcoin/Test/: RegTest.hs
