cabal-version: 3.4
name: zkfold-bitcoin-lib
version: 0.1.0.0
synopsis:
  Framework to help interact with zkFold's validators related to Bitcoin ledger on Cardano blockchain

-- description:
license: MIT
license-file: LICENSE
author: Sourabh Aggarwal
maintainer: info@zkfold.io
-- copyright:
category: Blockchain, Cardano, Bitcoin, Network
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common common
  ghc-options: -Wall
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    ViewPatterns

library
  import: common
  exposed-modules:
    ZkFold.Bitcoin.Class
    ZkFold.Bitcoin.Errors
    ZkFold.Bitcoin.IO
    ZkFold.Bitcoin.Provider.Common
    ZkFold.Bitcoin.Provider.MempoolSpace
    ZkFold.Bitcoin.Provider.Node
    ZkFold.Bitcoin.Provider.Node.ApiEnv
    ZkFold.Bitcoin.Provider.Node.Class
    ZkFold.Bitcoin.Provider.Node.Exception
    ZkFold.Bitcoin.Provider.Node.Request
    ZkFold.Bitcoin.Provider.Node.Response
    ZkFold.Bitcoin.Test.Constants
    ZkFold.Bitcoin.Types
    ZkFold.Bitcoin.Types.Internal.BlockHash
    ZkFold.Bitcoin.Types.Internal.BlockHeader
    ZkFold.Bitcoin.Types.Internal.BlockHeight
    ZkFold.Bitcoin.Types.Internal.Common
    ZkFold.Bitcoin.Types.Internal.HexByteString
    ZkFold.Bitcoin.Types.Internal.NetworkId
    ZkFold.Bitcoin.Types.Internal.Provider
    ZkFold.Bitcoin.Types.Internal.UTxO

  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    base >=4.18.3.0 && <5,
    base16-bytestring,
    bytes,
    bytestring,
    cryptohash-sha256,
    deriving-aeson,
    haskoin-core,
    http-client,
    http-client-tls,
    http-media,
    mtl,
    servant,
    servant-client,
    text,
    transformers,

  hs-source-dirs: src
  default-language: GHC2021

test-suite zkfold-bitcoin-lib-test
  import: common
  default-language: GHC2021
  other-modules:
    ZkFold.Bitcoin.Test.RegTest

  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    tasty,
    tasty-hunit,
    zkfold-bitcoin-lib,
